<resources>
    <string name="app_name">TaskManagerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="create_task">Create Task</string>
    <string name="location_not_fetched">Location: Not fetched</string>
    <string name="capture_image">Capture Image</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">Task Title</string>
    <string name="sample_image">Sample Image</string>
</resources>